--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,26 +9,18 @@ layout: default
 
   {{ content }}
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
+  <ul>
+    {% for student in site.data.students %}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+        <img src={{ student.img }} alt={{ student.name }} />
+        <a href="https://{{ student.url }}">
+          {{ student.name }}
+        </a>
       </li>
-      {%- endfor -%}
-    </ul>
+    {% endfor %}
+  </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-  {%- endif -%}
+
+ 
 
 </div>
