--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -3,14 +3,11 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body id={{page.title | downcase }}>
 
-    {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {{ content }}
     </main>
 
     {%- include footer.html -%}
