--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -4,12 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
-
-
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
 </head>
+
+<div class="topbar"></div>
