--- a/src/_sass/base/footer.scss
+++ b/src/_sass/base/footer.scss
@@ -1,11 +1,15 @@
 .site-footer {
+  position: static;
+  bottom: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-top: 8rem;
   @include media-query(768px) {
+    position: fixed;
     flex-direction: row;
   }
-
   a {
     display: inline-block;
     flex: 1;
@@ -18,9 +22,11 @@
       color: #fff;
       fill: currentColor;
     }
+    .active {
+      color: #fff;
+    }
     div {
       transition: all 450ms ease-in-out;
-
       color: #333;
       fill: currentColor;
       p {
