updating all files and setting up images for everything demo

--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="intro-banner"></div>
 
+<div class="logo-header"></div>
+
 <div class="home">
   {{ content }}
 </div>
