--- a/src/_layouts/grads.html
+++ b/src/_layouts/grads.html
@@ -4,6 +4,7 @@ layout: default
 
 <div>
   {%- include header.html -%}
-
-  {{ content }}
+  <div class="wrapper">
+    {{ content }}
+  </div>
 </div>
