--- a/src/_sass/base/main.scss
+++ b/src/_sass/base/main.scss
@@ -45,9 +45,18 @@ p {
 
 .intro-banner {
   background: url('../assets/images/top-bar.jpg') top center repeat-x;
-  background-size: contain;
-  height: 69px;
+  height: 119px;
   width: 100%;
+}
+
+.logo-header {
+  background: #fff url('../assets/images/logo.jpg') center center no-repeat;
+  background-size: 90%;
+  width: 100%;
+  height: 160px;
+  @include media-query(768px) {
+    background-size: auto;
+  }
 }
 
 .welcome {
@@ -72,6 +81,7 @@ p {
   text-align: center;
   background: #fff;
   padding: 4rem 0 0 0;
+  margin: 0 2rem;
   box-shadow: 
     0px 2px 2px 0px rgba(0,0,0,0.14), 
     0px 1px 5px 0px rgba(0,0,0,0.12), 
@@ -131,10 +141,58 @@ p {
   }
 }
 
+.site-header {
+  text-align: center;
+  margin: 0 0 4rem;
+
+}
+
+.menu-wrapper {
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    li {
+      font-size: 1.4rem;
+      margin: 0 2rem;
+      display: inline-block;
+      a {
+        color: #333;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+
+.student-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  gap: 2rem;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.img-responsive {
+  max-width: 100%;
+  width: 100%;
+}
 
 .explore-container {
   margin: 4rem auto 0;
   @include media-query(768px) {
     max-width: 50%;
+  }
+}
+
+#explore {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+
+  .site-footer {
+    margin-top: auto;
   }
 }
