moving files outside of src for gh-pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <nav class="menu-wrapper menu-wrapper--special">
       <ul class="menu">
         <li><a href="#">Graphic Design</a></li>
-        <li><a href="#">Advertising Design</a></li>
+        <li><a href="{{ site.baseurl }}/advertising-students.html">Advertising Design</a></li>
         <li><a href="#">Interior Design</a></li>
         <li><a href="#">Industrial Design</a></li>
       </ul>
